Fixed some button spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -355,11 +355,11 @@ strong {
 .btn-container {
   width: 40%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding-bottom: 3%;
 }
 .btn-container .btn {
-  width: 200px;
+  width: 150px;
 }
 .home-form {
   background: white;
